--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,149 +137,115 @@ jobs:
           rustup default stable
           rustup target add x86_64-unknown-none
 
-      # --------------------------
-      # Step: detect-nostd (Nu)
-      # - Find workspace lib packages
-      # - Build CORE_MATRIX: --no-default-features + all non-[default,std,alloc] features
-      # - Outputs (single-line JSON via `to json --raw`):
-      #     TARGET_BARE, PKG_LIST, CORE_MATRIX
+            # --------------------------
+      # Step: detect-nostd (Nu) → outputs via heredoc (lowercase keys)
       # --------------------------
       - name: detect-nostd (Nu)
-        id: detect-nostd
+        id: detect_nostd
         shell: nu {0}
         run: |
-          let TARGET_BARE = "x86_64-unknown-none"
+          let target_bare = "x86_64-unknown-none"
           let meta     = (cargo metadata --no-deps --format-version=1 | from json)
           let members  = $meta.workspace_members
-          let lib_kinds = [lib rlib staticlib cdylib dylib]  # accept any library-like target
+          let lib_kinds = [lib rlib staticlib cdylib dylib]
 
-          # Workspace packages by id, requiring at least one library-like target
+          # collect lib packages from workspace
           let pkgs = (
             $meta.packages
             | where {|p| $members | any {|m| $m == $p.id } }
             | where {|p|
                 $p.targets
-                | any {|t|
-                    ($t.kind? | default [])
-                    | any {|k| $lib_kinds | any {|lk| $lk == $k } }
-                  }
+                | any {|t| ($t.kind? | default []) | any {|k| $lib_kinds | any {|lk| $lk == $k } } }
               }
             | get name
             | uniq
           )
 
+          # build core_matrix (tolerate missing [features])
+          mut core_matrix = []
+          for name in $pkgs {
+            let pkg       = ($meta.packages | where name == $name | first)
+            let feat_cols = (($pkg.features? | default {}) | columns)
+            let extra     = ($feat_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
+            let args      = if ($extra | is-empty) { "--no-default-features" } else { $"--no-default-features --features ($extra)" }
+            $core_matrix  = ($core_matrix | append { pkg: $name, args: $args })
+          }
+
+          # human log
           print "== no_std candidates (lib targets) =="
           ($pkgs | each {|n| print $"- ($n)"} | ignore)
+          print $"core_matrix size: ($core_matrix | length)"
 
-          # Build core args per package, tolerating missing [features]
-          let core_matrix = (
-            $pkgs | each {|name|
-              let pkg        = ($meta.packages | where name == $name | first)
-              let feat_map   = ($pkg.features? | default {})   # <- tolerate missing features
-              let feat_cols  = ($feat_map | columns)
-              let extra      = (
-                $feat_cols
-                | where {|f| $f != "default" and $f != "std" and $f != "alloc"}
-                | str join ","
-              )
-              let args = if ($extra | is-empty) {
-                "--no-default-features"
-              } else {
-                $"--no-default-features --features ($extra)"
-              }
-              { pkg: $name, args: $args }
-            }
-          )
-
-          # Outputs (compact, one line)
-          $"TARGET_BARE=($TARGET_BARE)"                   | save --append --raw $env.GITHUB_OUTPUT
-          $"PKG_LIST=($pkgs | to json --raw)"            | save --append --raw $env.GITHUB_OUTPUT
-          $"CORE_MATRIX=($core_matrix | to json --raw)"  | save --append --raw $env.GITHUB_OUTPUT
+          # outputs (official multiline → heredoc) — names are lowercase!
+          $"target_bare=($target_bare)" | save --append $env.GITHUB_OUTPUT
+          $"pkg_list<<EOF"              | save --append $env.GITHUB_OUTPUT
+          ($pkgs | to json)            | save --append $env.GITHUB_OUTPUT
+          "EOF"                         | save --append $env.GITHUB_OUTPUT
+          $"core_matrix<<EOF"          | save --append $env.GITHUB_OUTPUT
+          ($core_matrix | to json)     | save --append $env.GITHUB_OUTPUT
+          "EOF"                         | save --append $env.GITHUB_OUTPUT
 
       # --------------------------
-      # Step: detect-alloc (Nu)
-      # - For packages with an "alloc" feature, build ALLOC_MATRIX
-      #   args = --no-default-features --features alloc[,extras...]
+      # Step: detect-alloc (Nu) → read heredoc output, write heredoc output
       # --------------------------
       - name: detect-alloc (Nu)
-        id: detect-alloc
+        id: detect_alloc
         shell: nu {0}
         env:
-          PKG_LIST: ${{ steps.detect-nostd.outputs.PKG_LIST }}
+          PKG_LIST: ${{ steps.detect_nostd.outputs.pkg_list }}
         run: |
-          let meta  = (cargo metadata --no-deps --format-version=1 | from json)
-          let pkgs  = (($env.PKG_LIST? | default "[]") | from json)
-        
-          if ($pkgs | is-empty) {
-            $"ALLOC_MATRIX=[]" | save --append --raw $env.GITHUB_OUTPUT
-            exit 0
+          let meta = (cargo metadata --no-deps --format-version=1 | from json)
+          let pkgs = (($env.PKG_LIST? | default "[]") | from json)
+
+          mut alloc_matrix = []
+          for name in $pkgs {
+            let pkg       = ($meta.packages | where name == $name | first)
+            let feat_cols = (($pkg.features? | default {}) | columns)
+            if ($feat_cols | any {|f| $f == "alloc"}) {
+              let extra = ($feat_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
+              let args  = if ($extra | is-empty) { "--no-default-features --features alloc" } else { $"--no-default-features --features alloc,($extra)" }
+              $alloc_matrix = ($alloc_matrix | append { pkg: $name, args: $args })
+            }
           }
-        
-          let alloc_matrix = (
-            $pkgs
-            | each {|name|
-                let pkg       = ($meta.packages | where name == $name | first)
-                let feat_map  = ($pkg.features? | default {})  # <- tolerate missing features
-                let feat_cols = ($feat_map | columns)
-                if ($feat_cols | any {|f| $f == "alloc"}) {
-                  let extra = (
-                    $feat_cols
-                    | where {|f| $f != "default" and $f != "std" and $f != "alloc"}
-                    | str join ","
-                  )
-                  let args = if ($extra | is-empty) {
-                    "--no-default-features --features alloc"
-                  } else {
-                    $"--no-default-features --features alloc,($extra)"
-                  }
-                  { pkg: $name, args: $args }
-                }
-              }
-            | compact
-          )
-        
-          $"ALLOC_MATRIX=($alloc_matrix | to json --raw)" | save --append --raw $env.GITHUB_OUTPUT
+
+          print $"alloc_matrix size: ($alloc_matrix | length)"
+
+          # output via heredoc (lowercase key)
+          $"alloc_matrix<<EOF"         | save --append $env.GITHUB_OUTPUT
+          ($alloc_matrix | to json)    | save --append $env.GITHUB_OUTPUT
+          "EOF"                         | save --append $env.GITHUB_OUTPUT
 
       # --------------------------
-      # Optional: debug matrices (useful if something looks empty)
+      # Optional: debug what we read back
       # --------------------------
       - name: Debug matrices (Nu)
         if: always()
         shell: nu {0}
         env:
-          CORE_MATRIX:  ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
-          ALLOC_MATRIX: ${{ steps.detect-alloc.outputs.ALLOC_MATRIX }}
+          CORE_MATRIX:  ${{ steps.detect_nostd.outputs.core_matrix }}
+          ALLOC_MATRIX: ${{ steps.detect_alloc.outputs.alloc_matrix }}
         run: |
-          print "CORE_MATRIX:"
-          let core_raw = ($env.CORE_MATRIX? | default "")
-          if ($core_raw | is-empty) { print "(empty)" } else { ($core_raw | from json) | table }
-          print "ALLOC_MATRIX:"
-          let alloc_raw = ($env.ALLOC_MATRIX? | default "")
-          if ($alloc_raw | is-empty) { print "(empty)" } else { ($alloc_raw | from json) | table }
+          print "CORE_MATRIX parsed:"
+          (if ($env.CORE_MATRIX? | default "" | is-empty) { [] } else { $env.CORE_MATRIX | from json }) | table
+          print "ALLOC_MATRIX parsed:"
+          (if ($env.ALLOC_MATRIX? | default "" | is-empty) { [] } else { $env.ALLOC_MATRIX | from json }) | table
 
       # --------------------------
-      # Build: no_std (Nu) — check + build for core & alloc
+      # Build: no_std (Nu) — read heredoc outputs, iterate
       # --------------------------
       - name: Cargo check (no_std) [Nu]
         shell: nu {0}
         env:
-          TARGET_BARE:  ${{ steps.detect-nostd.outputs.TARGET_BARE }}
-          CORE_MATRIX:  ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
-          ALLOC_MATRIX: ${{ steps.detect-alloc.outputs.ALLOC_MATRIX }}
+          TARGET_BARE:  ${{ steps.detect_nostd.outputs.target_bare }}
+          CORE_MATRIX:  ${{ steps.detect_nostd.outputs.core_matrix }}
+          ALLOC_MATRIX: ${{ steps.detect_alloc.outputs.alloc_matrix }}
         run: |
-          let TARGET    = $env.TARGET_BARE
+          let TARGET = ($env.TARGET_BARE)
+          let core   = (if ($env.CORE_MATRIX?  | default "" | is-empty) { [] } else { $env.CORE_MATRIX  | from json })
+          let alloc  = (if ($env.ALLOC_MATRIX? | default "" | is-empty) { [] } else { $env.ALLOC_MATRIX | from json })
+          let final  = ($core | append $alloc)
 
-          let core_raw  = ($env.CORE_MATRIX?  | default "")
-          let alloc_raw = ($env.ALLOC_MATRIX? | default "")
-
-          let core  = (if ($core_raw  | is-empty) { [] } else { $core_raw  | from json })
-          let alloc = (if ($alloc_raw | is-empty) { [] } else { $alloc_raw | from json })
-          let final = ($core | append $alloc)
-
-          if ($final | is-empty) {
-            print "No no_std packages detected (final)."
-            exit 1
-          }
+          if ($final | is-empty) { print "No no_std rows. Failing for visibility."; exit 1 }
 
           for row in $final {
             let pkg  = $row.pkg
@@ -291,17 +257,13 @@ jobs:
       - name: Cargo build (no_std, release) [Nu]
         shell: nu {0}
         env:
-          TARGET_BARE:  ${{ steps.detect-nostd.outputs.TARGET_BARE }}
-          CORE_MATRIX:  ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
-          ALLOC_MATRIX: ${{ steps.detect-alloc.outputs.ALLOC_MATRIX }}
+          TARGET_BARE:  ${{ steps.detect_nostd.outputs.target_bare }}
+          CORE_MATRIX:  ${{ steps.detect_nostd.outputs.core_matrix }}
+          ALLOC_MATRIX: ${{ steps.detect_alloc.outputs.alloc_matrix }}
         run: |
-          let TARGET    = $env.TARGET_BARE
-
-          let core_raw  = ($env.CORE_MATRIX?  | default "")
-          let alloc_raw = ($env.ALLOC_MATRIX? | default "")
-
-          let core  = (if ($core_raw  | is-empty) { [] } else { $core_raw  | from json })
-          let alloc = (if ($alloc_raw | is-empty) { [] } else { $alloc_raw | from json })
+          let TARGET = ($env.TARGET_BARE)
+          let core = (if ($env.CORE_MATRIX?  | default "" | is-empty) { [] } else { $env.CORE_MATRIX  | from json })
+          let alloc = (if ($env.ALLOC_MATRIX? | default "" | is-empty) { [] } else { $env.ALLOC_MATRIX | from json })
           let final = ($core | append $alloc)
 
           for row in $final {
